--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "devconnect",
+  "name": "ConnectIO",
   "version": "1.0.0",
-  "description": "Social Network for Devs",
+  "description": "Social Network for People",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Wei Sheng Tan",
   "license": "MIT",
@@ -18,6 +19,7 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.21",
+    "prettier": "^2.0.5",
     "request": "^2.88.2"
   },
   "devDependencies": {
